K8S/redis/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: backend
spec:
  containers:
  - name: redis
    image: redis:5.0.4
    imagePullPolicy: IfNotPresent
    command:
      - redis-server
    ports:
    - containerPort: 6379
