K8S/redis/redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-service
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: backend
